err/seissuite.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/seissuite'...
Listing './lib/python3.5/site-packages/seissuite/ant'...
Compiling './lib/python3.5/site-packages/seissuite/ant/psconfig.py'...
***   File "./lib/python3.5/site-packages/seissuite/ant/psconfig.py", line 45
    print 'config_file: ', config_file
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/ant/pscrosscorr.py'...
***   File "./lib/python3.5/site-packages/seissuite/ant/pscrosscorr.py", line 546
    print 'There was an unexpected error: ', err
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/ant/psdepthmodel.py'...
***   File "./lib/python3.5/site-packages/seissuite/ant/psdepthmodel.py", line 218
    print 'Preparing model and periods files'
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/ant/psmcsampling.py'...
***   File "./lib/python3.5/site-packages/seissuite/ant/psmcsampling.py", line 91
    print s.format(self, other)
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seissuite/ant/pspreprocess.py'...
***   File "./lib/python3.5/site-packages/seissuite/ant/pspreprocess.py", line 151
    print s.format(trace.stats.network, trace.stats.station),
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seissuite/ant/psstation.py'...
***   File "./lib/python3.5/site-packages/seissuite/ant/psstation.py", line 304
    print "Scanning stations in dir: " + mseed_dir
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/ant/psstationSQL.py'...
***   File "./lib/python3.5/site-packages/seissuite/ant/psstationSQL.py", line 272
    print "Scanning stations in SQL database: \n", SQL_db
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/ant/pstomo.py'...
***   File "./lib/python3.5/site-packages/seissuite/ant/pstomo.py", line 684
    print "Velocities selection criteria:"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/ant/psutils.py'...
***   File "./lib/python3.5/site-packages/seissuite/ant/psutils.py", line 168
    print s.format(loc=select_loc, locs=','.join(locs[1:])),
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seissuite/ant/stack.py'...
***   File "./lib/python3.5/site-packages/seissuite/ant/stack.py", line 144
    print error
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/seissuite/azimuth'...
Compiling './lib/python3.5/site-packages/seissuite/azimuth/NZ_density.py'...
***   File "./lib/python3.5/site-packages/seissuite/azimuth/NZ_density.py", line 72
    print type(UNIQUE_SHAPE)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seissuite/azimuth/decluster.py'...
***   File "./lib/python3.5/site-packages/seissuite/azimuth/decluster.py", line 85
    print type(UNIQUE_SHAPE)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seissuite/azimuth/extended_geodesic.py'...
***   File "./lib/python3.5/site-packages/seissuite/azimuth/extended_geodesic.py", line 99
    print coord_combs
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/seissuite/database'...
Compiling './lib/python3.5/site-packages/seissuite/database/create_database.py'...
***   File "./lib/python3.5/site-packages/seissuite/database/create_database.py", line 22
    print "Caution, database code may run slow due to cPickle failed import"
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/database/response_database.py'...
***   File "./lib/python3.5/site-packages/seissuite/database/response_database.py", line 26
    print "Caution, database code may run slow due to cPickle failed import"
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/seissuite/misc'...
Listing './lib/python3.5/site-packages/seissuite/response'...
Compiling './lib/python3.5/site-packages/seissuite/response/FDSN_resp.py'...
***   File "./lib/python3.5/site-packages/seissuite/response/FDSN_resp.py", line 50
    print net
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/response/resp.py'...
***   File "./lib/python3.5/site-packages/seissuite/response/resp.py", line 27
    print "Caution, database code may run slow due to cPickle failed import"
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/seissuite/spacing'...
Listing './lib/python3.5/site-packages/seissuite/spectrum'...
Compiling './lib/python3.5/site-packages/seissuite/spectrum/S_spectrum.py'...
***   File "./lib/python3.5/site-packages/seissuite/spectrum/S_spectrum.py", line 149
    print "time taken to import one month mseed was: ", t1-t0
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/spectrum/Sfind_extrema.py'...
***   File "./lib/python3.5/site-packages/seissuite/spectrum/Sfind_extrema.py", line 214
    print lonmin, latmin, lonmax, latmax
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/spectrum/extrema_pickle.py'...
***   File "./lib/python3.5/site-packages/seissuite/spectrum/extrema_pickle.py", line 213
    print lonmin, latmin, lonmax, latmax
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/spectrum/find_extrema.py'...
***   File "./lib/python3.5/site-packages/seissuite/spectrum/find_extrema.py", line 212
    print lonmin, latmin, lonmax, latmax
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/spectrum/find_maxima.py'...
***   File "./lib/python3.5/site-packages/seissuite/spectrum/find_maxima.py", line 256
    print "time taken to import one month mseed was: ", t1-t0
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/spectrum/heat_pickle.py'...
***   File "./lib/python3.5/site-packages/seissuite/spectrum/heat_pickle.py", line 525
    print lonmin, latmin, lonmax, latmax
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/spectrum/heatinterpolate.py'...
***   File "./lib/python3.5/site-packages/seissuite/spectrum/heatinterpolate.py", line 71
    print xmin, xmax, ymin, ymax
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/spectrum/network_spectrum.py'...
***   File "./lib/python3.5/site-packages/seissuite/spectrum/network_spectrum.py", line 149
    print "time taken to import one month mseed was: ", t1-t0
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seissuite/spectrum/station_month_spectrum.py'...
***   File "./lib/python3.5/site-packages/seissuite/spectrum/station_month_spectrum.py", line 127
    subtitle = '{} | {}'.format(stat_info, month_year); print subtitle
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seissuite/spectrum/total_spectrum.py'...
***   File "./lib/python3.5/site-packages/seissuite/spectrum/total_spectrum.py", line 129
    print "time taken to import one month mseed was: ", t1-t0
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/seissuite/trigger'...
Listing './lib/python3.5/site-packages/seissuite-0.1.29.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
